# coremlmodels

./: .gitignore  README.md  main.py  pyproject.toml
docs/: AGENTS.md  CODEBASE_STRUCTURE.md  CODING_STANDARDS.md  CONVERSION_GUIDE.md  GLM_OCR_MTP_SPECULATIVE_DECODING.md  INFERENCE_GUIDE.md  RMSNORM_PATCHING.md  TESTING_GUIDE.md  glm_ocr_vision_conversion_insights.md  pp_doclayout_conversion_plan.md
examples/: coreml_conversion_example.py  debug_vision_nan.py  export_embeddings_lmhead.py  glm_ocr_coreml_inference.py  glm_ocr_mtp_conversion.py  glm_ocr_text_conversion.py  inference.py  lm_conversion_example.py  rmsnorm_conversion_example.py  vision_conversion_example.py
src/coremlmodels/: __init__.py  analysis.py  chunked_lm_head.py  compiled_model_utils.py  export_utils.py  glm_ocr_coreml_pipeline.py  glm_ocr_mtp_model.py  glm_ocr_text_model.py  graph_passes.py  lm_model_wrapper.py  patch_attention.py  patch_linears.py  patch_rmsnorm.py  registry.py  vision_model_wrapper.py
src/coremlmodels/glm_ocr/: __init__.py  glm_ocr_coreml_pipeline.py  glm_ocr_mtp_model.py  glm_ocr_text_model.py
src/coremlmodels/glm_ocr/docs/: glm_ocr_vision_conversion_insights.md  pp_doclayout_research.md
tests/: test_chunked_lm_head.py  test_layernorm_fusion.py  test_patch_linears.py  test_patch_rmsnorms.py
